--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
+*~
 *.rbc
 *.sassc
-.sass-cache
-capybara-*.html
-.rspec
-/.bundle
-/vendor/bundle
-/log/*
-/tmp/*
-/db/*.sqlite3
-/public/system/*
-/coverage/
-/spec/tmp/*
 **.orig
-rerun.txt
+.bundle
+.rspec
+.sass-cache
+.vagrant
+capybara-*.html
 pickle-email-*.html
+rerun.txt
+/cookbooks
+/coverage
+/db/*.sqlite3
+/log/*
+/public/system/*
+/spec/tmp/*
+/tmp/*
+/vendor/bundle
